@@ -9,10 +9,13 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Slice;
-import ru.ifmo.se.restaurant.kitchen.entity.DishStatus;
-import ru.ifmo.se.restaurant.kitchen.entity.KitchenQueue;
-import ru.ifmo.se.restaurant.kitchen.repository.KitchenQueueRepository;
+import ru.ifmo.se.restaurant.kitchen.domain.entity.KitchenQueue;
+import ru.ifmo.se.restaurant.kitchen.domain.valueobject.DishStatus;
+import ru.ifmo.se.restaurant.kitchen.infrastructure.adapter.out.persistence.KitchenQueueRepositoryAdapter;
+import ru.ifmo.se.restaurant.kitchen.infrastructure.adapter.out.persistence.entity.KitchenQueueJpaEntity;
+import ru.ifmo.se.restaurant.kitchen.infrastructure.adapter.out.persistence.repository.KitchenQueueJpaRepository;
 
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -25,81 +28,92 @@ import static org.mockito.Mockito.*;
 class KitchenQueueDataAccessTest {
 
     @Mock
-    private KitchenQueueRepository repository;
+    private KitchenQueueJpaRepository jpaRepository;
 
     @InjectMocks
-    private KitchenQueueDataAccess dataAccess;
+    private KitchenQueueRepositoryAdapter adapter;
 
     @Test
     void save() {
-        KitchenQueue queue = new KitchenQueue();
-        when(repository.save(any())).thenReturn(queue);
-        assertNotNull(dataAccess.save(queue));
+        KitchenQueue queue = KitchenQueue.builder()
+                .id(1L)
+                .orderId(1L)
+                .orderItemId(1L)
+                .dishName("Test")
+                .quantity(1)
+                .status(DishStatus.PENDING)
+                .createdAt(LocalDateTime.now())
+                .build();
+        KitchenQueueJpaEntity entity = KitchenQueueJpaEntity.fromDomain(queue);
+        when(jpaRepository.save(any())).thenReturn(entity);
+        assertNotNull(adapter.save(queue));
     }
 
     @Test
     void findById() {
-        when(repository.findById(1L)).thenReturn(Optional.of(new KitchenQueue()));
-        assertTrue(dataAccess.findById(1L).isPresent());
-    }
-
-    @Test
-    void getById() {
-        KitchenQueue queue = new KitchenQueue();
-        when(repository.findById(1L)).thenReturn(Optional.of(queue));
-        assertNotNull(dataAccess.getById(1L));
+        KitchenQueueJpaEntity entity = KitchenQueueJpaEntity.builder()
+                .id(1L)
+                .orderId(1L)
+                .orderItemId(1L)
+                .dishName("Test")
+                .quantity(1)
+                .status(DishStatus.PENDING)
+                .createdAt(LocalDateTime.now())
+                .build();
+        when(jpaRepository.findById(1L)).thenReturn(Optional.of(entity));
+        assertTrue(adapter.findById(1L).isPresent());
     }
 
     @Test
     void findAll() {
-        when(repository.findAll()).thenReturn(Collections.emptyList());
-        assertNotNull(dataAccess.findAll());
+        when(jpaRepository.findAll()).thenReturn(Collections.emptyList());
+        assertNotNull(adapter.findAll());
     }
 
     @Test
     void deleteById() {
-        doNothing().when(repository).deleteById(1L);
-        dataAccess.deleteById(1L);
-        verify(repository).deleteById(1L);
+        doNothing().when(jpaRepository).deleteById(1L);
+        adapter.deleteById(1L);
+        verify(jpaRepository).deleteById(1L);
     }
 
     @Test
     void findByStatusInOrderByCreatedAtAsc() {
-        when(repository.findByStatusInOrderByCreatedAtAsc(any())).thenReturn(Collections.emptyList());
-        assertNotNull(dataAccess.findByStatusInOrderByCreatedAtAsc(List.of(DishStatus.PENDING)));
+        when(jpaRepository.findByStatusInOrderByCreatedAtAsc(any())).thenReturn(Collections.emptyList());
+        assertNotNull(adapter.findByStatusInOrderByCreatedAtAsc(List.of(DishStatus.PENDING)));
     }
 
     @Test
     void findByOrderId() {
-        when(repository.findByOrderId(1L)).thenReturn(Collections.emptyList());
-        assertNotNull(dataAccess.findByOrderId(1L));
+        when(jpaRepository.findByOrderId(1L)).thenReturn(Collections.emptyList());
+        assertNotNull(adapter.findByOrderId(1L));
     }
 
     @Test
     void existsById() {
-        when(repository.existsById(1L)).thenReturn(true);
-        assertTrue(dataAccess.existsById(1L));
+        when(jpaRepository.existsById(1L)).thenReturn(true);
+        assertTrue(adapter.existsById(1L));
     }
 
     @Test
     void findAllPaginated() {
-        Page<KitchenQueue> page = new PageImpl<>(Collections.emptyList());
-        when(repository.findAll(any(PageRequest.class))).thenReturn(page);
-        assertNotNull(dataAccess.findAll(PageRequest.of(0, 20)));
+        Page<KitchenQueueJpaEntity> page = new PageImpl<>(Collections.emptyList());
+        when(jpaRepository.findAll(any(PageRequest.class))).thenReturn(page);
+        assertNotNull(adapter.findAll(PageRequest.of(0, 20)));
     }
 
     @Test
     void findAllSlice() {
-        Page<KitchenQueue> page = new PageImpl<>(Collections.emptyList());
-        when(repository.findAll(any(PageRequest.class))).thenReturn(page);
-        Slice<KitchenQueue> slice = dataAccess.findAllSlice(PageRequest.of(0, 20));
+        Page<KitchenQueueJpaEntity> page = new PageImpl<>(Collections.emptyList());
+        when(jpaRepository.findAll(any(PageRequest.class))).thenReturn(page);
+        Slice<KitchenQueue> slice = adapter.findAllSlice(PageRequest.of(0, 20));
         assertNotNull(slice);
     }
 
     @Test
     void findByStatus() {
-        Page<KitchenQueue> page = new PageImpl<>(Collections.emptyList());
-        when(repository.findByStatus(any(), any())).thenReturn(page);
-        assertNotNull(dataAccess.findByStatus(DishStatus.PENDING, PageRequest.of(0, 20)));
+        Page<KitchenQueueJpaEntity> page = new PageImpl<>(Collections.emptyList());
+        when(jpaRepository.findByStatus(any(), any())).thenReturn(page);
+        assertNotNull(adapter.findByStatus(DishStatus.PENDING, PageRequest.of(0, 20)));
     }
 }
